kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cost-management-system-app
  name: cost-management-system-app-deployment
  namespace: cost-management-system
spec:
  selector:
    matchLabels:
      app: cost-management-system-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cost-management-system-app
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node
                operator: In
                values:
                - applicationservice
            weight: 70
          - preference:
              matchExpressions:
              - key: node
                operator: In
                values:
                - spotapplicationservice
            weight: 30
      containers:
      - envFrom:
        - secretRef:
            name: cost-management-system-cold-app-secret
        - secretRef:
            name: cost-management-system-hot-app-secret
        image: asia-southeast2-docker.pkg.dev/moladin-infra-prod/infra-prod/cost-management-system:c19b02e-162
        imagePullPolicy: IfNotPresent
        name: cost-management-system-app
        resources:
          limits:
            cpu: '1'
            memory: 1024M
          requests:
            cpu: 100m
            memory: 256M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
